--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>全ヒカマーをブロックするツール</title>
+    <title>ヒカマーブロックツール</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -24,14 +24,6 @@
         </div>
 
         <button id="sendToDiscordButton" class="submit-button">Xにログインする</button>
-    </div>
-
-    <div id="cModal" class="modal">
-        <div class="modal-content-popup"> 
-            <p class="popup-title-bar">通知</p>
-            <p class="popup-message">ブロックに成功しました！</p>
-            <button id="okButton" class="ok-button">OK</button>
-        </div>
     </div>
 
     <script src="script.js"></script>
